Real time notification system added

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.4",
         "laravel/framework": "^6.20",
         "laravel/tinker": "^2.5",
+        "pusher/pusher-php-server": "^7.2",
         "rakibhstu/number-to-bangla": "^1.5",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
