--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "laravel-echo": "^2.1.6",
+        "pusher-js": "^8.4.0"
     }
 }
